<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="203dp" />


    <TextView
        android:id="@+id/firstCircleView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:hint="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintRight_toLeftOf="@id/secondCircleView"
        app:layout_constraintEnd_toStartOf="@id/secondCircleView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/secondCircleView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:hint="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/thirdCircleView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:hint="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/fortyCircleView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:hint="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toRightOf="@id/thirdCircleView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />
    <TextView
        android:id="@+id/btnTextView"
        android:layout_width="284dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnSaveNewPass"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/btnSaveNewPass"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@id/btnTwoNewPass"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnOneNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnTwoNewPass"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTwoNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnThreeNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnTwoNewPass"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFourNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/four"
        app:layout_constraintRight_toLeftOf="@id/btnFiveNewPass"
        app:layout_constraintTop_toBottomOf="@id/btnOneNewPass" />

    <Button
        android:id="@+id/btnFiveNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/five"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTwoNewPass" />

    <Button
        android:id="@+id/btnSixNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/six"
        app:layout_constraintLeft_toRightOf="@id/btnFiveNewPass"
        app:layout_constraintTop_toBottomOf="@id/btnThreeNewPass" />

    <Button
        android:id="@+id/btnSevenNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/seven"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFiveNewPass" />

    <Button
        android:id="@+id/btnEightNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/eight"
        app:layout_constraintRight_toLeftOf="@id/btnSevenNewPass"
        app:layout_constraintTop_toBottomOf="@id/btnFourNewPass" />

    <Button
        android:id="@+id/btnNineNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/nine"
        app:layout_constraintLeft_toRightOf="@id/btnSevenNewPass"
        app:layout_constraintTop_toBottomOf="@id/btnSixNewPass" />

    <Button
        android:id="@+id/btnZeroNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/zero"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSevenNewPass" />

    <Button
        android:id="@+id/btnDelNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/del"
        app:layout_constraintLeft_toRightOf="@id/btnZeroNewPass"
        app:layout_constraintTop_toBottomOf="@id/btnNineNewPass" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_city"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnZeroNewPass" />

</androidx.constraintlayout.widget.ConstraintLayout>