<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="203dp" />


        <ImageView
            android:id="@+id/firstCirclePass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintRight_toLeftOf="@id/secondCirclePass"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <ImageView
            android:id="@+id/secondCirclePass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <ImageView
            android:id="@+id/thirdCirclePass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <ImageView
            android:id="@+id/fortyCirclePass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintLeft_toRightOf="@id/thirdCirclePass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.185" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnTwo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnTwo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/four"
            app:layout_constraintRight_toLeftOf="@id/btnFive"
            app:layout_constraintTop_toBottomOf="@id/btnOne" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/five"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTwo" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/six"
            app:layout_constraintLeft_toRightOf="@id/btnFive"
            app:layout_constraintTop_toBottomOf="@id/btnThree" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/seven"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFive" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/eight"
            app:layout_constraintRight_toLeftOf="@id/btnSeven"
            app:layout_constraintTop_toBottomOf="@id/btnFour" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nine"
            app:layout_constraintLeft_toRightOf="@id/btnSeven"
            app:layout_constraintTop_toBottomOf="@id/btnSix" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/zero"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSeven" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/del"
            app:layout_constraintLeft_toRightOf="@id/btnZero"
            app:layout_constraintTop_toBottomOf="@id/btnNine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>